changes for geolocation. Endpoint created for navigation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Datasource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/GeoSyncra
+spring.datasource.url=jdbc:postgresql://geosyncra.c5i6k2usycnj.us-east-2.rds.amazonaws.com:5432/GeoSyncra
 spring.datasource.username=postgres
 spring.datasource.password=Gokul003!
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,4 +14,4 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #Port
-server.port=5151
+server.port=5000
