--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Datasource configuration
-spring.datasource.url=jdbc:postgresql://geosyncra.c5i6k2usycnj.us-east-2.rds.amazonaws.com:5432/GeoSyncra
-spring.datasource.username=postgres
-spring.datasource.password=Gokul003!
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate configuration
@@ -13,5 +13,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#Port
-server.port=5000
+# Port configuration
+server.port=${PORT:5000}
